# cmake-cpm

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  teste-avaliador.cpp  teste-leilao.cpp  teste-usuario.cpp
